Use original base64 instead and add polyglot support
Signed-off-by: sczyh30 <sczyh16@gmail.com>