@@ -1,8 +1,9 @@
 package io.vertx.ext.auth.oauth2;
 
+import io.vertx.codegen.annotations.VertxGen;
 import io.vertx.core.json.JsonObject;
-import sun.misc.BASE64Decoder;
 
+import java.util.Base64;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -12,10 +13,8 @@ import java.util.Set;
  *
  * @author Eric Zhao
  */
-public final class KeycloakHelper {
-
-  private KeycloakHelper() {
-  }
+@VertxGen
+public interface KeycloakHelper {
 
   /**
    * Get raw `id_token` string from the principal.
@@ -23,7 +22,7 @@ public final class KeycloakHelper {
    * @param principal user principal
    * @return the raw id token string
    */
-  public static String getRawIdToken(JsonObject principal) {
+  static String getRawIdToken(JsonObject principal) {
     return principal.getString("id_token");
   }
 
@@ -33,7 +32,7 @@ public final class KeycloakHelper {
    * @param principal user principal
    * @return the id token
    */
-  public static JsonObject getIdToken(JsonObject principal) {
+  static JsonObject getIdToken(JsonObject principal) {
     return parseToken(getRawIdToken(principal));
   }
 
@@ -43,7 +42,7 @@ public final class KeycloakHelper {
    * @param principal user principal
    * @return the raw access token string
    */
-  public static String getRawAccessToken(JsonObject principal) {
+  static String getRawAccessToken(JsonObject principal) {
     return principal.getString("access_token");
   }
 
@@ -53,42 +52,42 @@ public final class KeycloakHelper {
    * @param principal user principal
    * @return the access token
    */
-  public static JsonObject getAccessToken(JsonObject principal) {
+  static JsonObject getAccessToken(JsonObject principal) {
     return parseToken(getRawAccessToken(principal));
   }
 
   // helper methods for getting fields from the principal
 
-  public static int getAuthTime(JsonObject principal) {
+  static int getAuthTime(JsonObject principal) {
     return getIdToken(principal).getInteger("auth_time");
   }
 
-  public static String getSessionState(JsonObject principal) {
+  static String getSessionState(JsonObject principal) {
     return getIdToken(principal).getString("session_state");
   }
 
-  public static String getAcr(JsonObject principal) {
+  static String getAcr(JsonObject principal) {
     return getIdToken(principal).getString("acr");
   }
 
-  public static String getName(JsonObject principal) {
+  static String getName(JsonObject principal) {
     return getIdToken(principal).getString("name");
   }
 
-  public static String getEmail(JsonObject principal) {
+  static String getEmail(JsonObject principal) {
     return getIdToken(principal).getString("email");
   }
 
-  public static String getPreferredUsername(JsonObject principal) {
+  static String getPreferredUsername(JsonObject principal) {
     return getIdToken(principal).getString("preferred_username");
   }
 
-  public static String getNickName(JsonObject principal) {
+  static String getNickName(JsonObject principal) {
     return getIdToken(principal).getString("nickname");
   }
 
   @SuppressWarnings("unchecked")
-  public static Set<String> getAllowedOrigins(JsonObject principal) {
+  static Set<String> getAllowedOrigins(JsonObject principal) {
     List<String> allowedOrigins = getAccessToken(principal)
       .getJsonArray("allowed-origins")
       .getList();
@@ -96,13 +95,13 @@ public final class KeycloakHelper {
   }
 
   /**
-   * Parse the token string with base64 encoder.
+   * Parse the token string with base64 decoder.
    * This will only obtain the "payload" part of the token.
    *
    * @param token token string
    * @return token payload json object
    */
-  public static JsonObject parseToken(String token) {
+  static JsonObject parseToken(String token) {
     if (token == null) {
       return null;
     }
@@ -110,34 +109,12 @@ public final class KeycloakHelper {
     if (parts.length < 2 || parts.length > 3) {
       throw new IllegalArgumentException("Parsing error");
     }
-    return new JsonObject(decodeBase64(parts[1])); // get "payload" part
-  }
-
-  private static String decodeBase64(String s) {
-    String decoded = null;
-    if (s != null) {
-      s = s.replace('-', '+');
-      s = s.replace('_', '/');
-      switch (s.length() % 4) { // need padding
-        case 0:
-          break;
-        case 2:
-          s += "==";
-          break;
-        case 3:
-          s += "=";
-          break;
-        default:
-          throw new RuntimeException("Illegal string");
-      }
-      BASE64Decoder decoder = new BASE64Decoder();
-      try {
-        byte[] b = decoder.decodeBuffer(s);
-        decoded = new String(b, "UTF-8");
-      } catch (Exception ex) {
-        ex.printStackTrace();
-      }
+    try {
+      String decoded = new String(Base64.getDecoder().decode(parts[1]), "UTF-8");
+      return new JsonObject(decoded); // get "payload" part
+    } catch (Exception e) {
+      e.printStackTrace();
+      return null;
     }
-    return decoded;
   }
 }
